--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.6.3",
+    "yaml": "^2.3.1"
   }
 }
