--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ./tests/auth-api.test.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -21,8 +22,12 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "yaml": "^2.3.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
